--- a/src/templates/product-page.sass
+++ b/src/templates/product-page.sass
@@ -6,3 +6,21 @@
 
 .hero-cta
   margin: 1rem
+
+.hero .title
+  margin: 1rem
+
+// Helper Classes
+.full-width-image-container
+  width: 100vw
+  position: relative
+  left: 50%
+  right: 50%
+  margin: 5em -50vw
+  background-color: #000
+  background-size: cover
+  background-position: 50% 50%
+  // background-blend-mode: overlay
+  display: flex
+  justify-content: center
+  align-items: center
