External data sources - getting there!

--- a/src/templates/product-page.sass
+++ b/src/templates/product-page.sass
@@ -7,16 +7,26 @@
 .hero-cta
   margin: 1rem
 
-.hero .title
+.hero .main-title
   margin: 1rem
 
-// Helper Classes
 .full-width-image-container
   width: 100vw
   position: relative
   left: 50%
   right: 50%
   margin: 5em -50vw
+  background-color: #000
+  background-size: cover
+  background-position: 50% 50%
+  display: flex
+  justify-content: center
+  align-items: center
+
+.image-container
+  width: 100vw
+  left: 0
+  position: relative
   background-color: #000
   background-size: cover
   background-position: 50% 50%
