Testimonials and Google Map

--- a/src/components/BigTitle.sass
+++ b/src/components/BigTitle.sass
@@ -1,7 +1,11 @@
+@import "../layouts/all"
+
 .big-title
   align-items: center
   border-top: 1px solid #000
   display: flex
+  margin-bottom: 2rem
+  margin-top: 6rem
 
   h1
     background: #fff
@@ -9,3 +13,9 @@
     margin: -0.5em auto 1em
     max-width: 80%
     padding: 0 1em
+
+    span
+      color: $primary
+      display: block
+      margin: 1rem 0
+      text-align: left
