--- a/src/templates/product-page.sass
+++ b/src/templates/product-page.sass
@@ -10,6 +10,9 @@
 .hero .main-title
   margin: 1rem
 
+.content figure
+  margin: 0
+
 .full-width-image-container
   width: 100vw
   position: relative
