--- a/src/components/Content.sass
+++ b/src/components/Content.sass
@@ -3,8 +3,12 @@
 .content-block
   margin: 4rem 0
 
+  .content
+    padding: 1rem
+
   h1 span
     color: $primary
     display: block
     margin: 1rem 0
     text-align: left
+    padding: 1rem
