--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -12,6 +12,8 @@ $red: $codaisseur-red
 $family-sans-serif: 'Roboto', sans-serif
 $family-monospace: 'Roboto Mono', monospace
 
+$footer-background-color: #1a1a1a
+
 h1, h2, h3
   font-family: $family-monospace
 
